@@ -181,6 +181,7 @@
       <label help='1'>Most window managers provide a way to iconify (or 'minimise') windows, and various programs, including ROX-Filer, can be used to display the iconified windows.</label>
       <frame label='Iconified windows'>
        <toggle name='pinboard_tasklist' label='Show iconified windows'>If this option is on, the filer will show each iconified window as a small button on the pinboard. Requires a compatible window manager, and the pinboard must be in use.</toggle>
+       <toggle name='pinboard_tasklist_per_workspace' label='Show per workspace'>If this option is on, the filer will only show iconified windows associated with the current workspace.</toggle>
        <spacer/>
        <hbox>
          <menu name='iconify_start' label='Iconify to the'>
