@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 			
+29-Jul-2005
+~~~~~~~~~~~
+Added option to only show iconified windows belonging to the current workspace
+(Tom Morton).
+
 28-Jul-2005
 ~~~~~~~~~~~
 Updated Dutch translation (Jan Wagemakers).
